// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProtectionRecoveryRequest activated protection request 1`] = `
<FullWidthPane
  mainTitle="My Logion Protection"
  titleIcon={
    Object {
      "background": undefined,
      "icon": Object {
        "hasVariants": true,
        "id": "shield",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <div
      className="alert-activated"
      style={
        Object {
          "borderColor": "#37ad4b",
          "color": "#37ad4b",
        }
      }
    >
      <Icon
        icon={
          Object {
            "id": "activated",
          }
        }
      />
       Your Logion Trust Protection is active
    </div>
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <LegalOfficers
      legalOfficer1={
        Object {
          "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
          "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
          "name": "Guillaume Grain",
        }
      }
      legalOfficer1Decision="PENDING"
      legalOfficer2={
        Object {
          "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
          "name": "Patrick Gielen",
        }
      }
      legalOfficer2Decision="PENDING"
      legalOfficers={
        Array [
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick Gielen",
          },
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume Grain",
          },
          Object {
            "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Eline Duysens",
          },
          Object {
            "address": "1234567890-abcd-6",
            "details": "Place de le République Française, 10",
            "name": "Ronald Vanswijgenhoven",
          },
          Object {
            "address": "1234567890-abcd-7",
            "details": "Place de le République Française, 10",
            "name": "Thibaut Barnier",
          },
          Object {
            "address": "1234567890-abcd-8",
            "details": "Place de le République Française, 10",
            "name": "Jona Van Leeuwen",
          },
          Object {
            "address": "1234567890-abcd-9",
            "details": "Place de le République Française, 10",
            "name": "Carlos Calvo",
          },
          Object {
            "address": "1234567890-abcd-10",
            "details": "Place de le République Française, 10",
            "name": "Ilias Tsipos",
          },
          Object {
            "address": "1234567890-abcd-11",
            "details": "Place de le République Française, 10",
            "name": "Pedroso Leal",
          },
          Object {
            "address": "1234567890-abcd-12",
            "details": "Place de le République Française, 10",
            "name": "Marc Schmitz",
          },
        ]
      }
      mode="view"
      setLegalOfficer1={[Function]}
      setLegalOfficer2={[Function]}
      status="ACTIVATED"
    />
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest activated recovery request 1`] = `
<FullWidthPane
  mainTitle="My Logion Protection"
  titleIcon={
    Object {
      "background": undefined,
      "icon": Object {
        "hasVariants": true,
        "id": "shield",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Alert
      variant="info"
    >
      You are now ready to claim the access to address 
      toRecover
      .
    </Alert>
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <Button
      data-testid="btnClaim"
      onClick={[Function]}
    >
      Claim
    </Button>
    <ExtrinsicSubmitter
      id="initiateRecovery"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Recovery successfully initiated."
    />
    <LegalOfficers
      legalOfficer1={
        Object {
          "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
          "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
          "name": "Guillaume Grain",
        }
      }
      legalOfficer1Decision="PENDING"
      legalOfficer2={
        Object {
          "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
          "name": "Patrick Gielen",
        }
      }
      legalOfficer2Decision="PENDING"
      legalOfficers={
        Array [
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick Gielen",
          },
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume Grain",
          },
          Object {
            "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Eline Duysens",
          },
          Object {
            "address": "1234567890-abcd-6",
            "details": "Place de le République Française, 10",
            "name": "Ronald Vanswijgenhoven",
          },
          Object {
            "address": "1234567890-abcd-7",
            "details": "Place de le République Française, 10",
            "name": "Thibaut Barnier",
          },
          Object {
            "address": "1234567890-abcd-8",
            "details": "Place de le République Française, 10",
            "name": "Jona Van Leeuwen",
          },
          Object {
            "address": "1234567890-abcd-9",
            "details": "Place de le République Française, 10",
            "name": "Carlos Calvo",
          },
          Object {
            "address": "1234567890-abcd-10",
            "details": "Place de le République Française, 10",
            "name": "Ilias Tsipos",
          },
          Object {
            "address": "1234567890-abcd-11",
            "details": "Place de le République Française, 10",
            "name": "Pedroso Leal",
          },
          Object {
            "address": "1234567890-abcd-12",
            "details": "Place de le République Française, 10",
            "name": "Marc Schmitz",
          },
        ]
      }
      mode="view"
      setLegalOfficer1={[Function]}
      setLegalOfficer2={[Function]}
      status="ACTIVATED"
    />
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest pending protection request 1`] = `
<FullWidthPane
  mainTitle="My Logion Protection"
  titleIcon={
    Object {
      "background": undefined,
      "icon": Object {
        "hasVariants": true,
        "id": "shield",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Alert
      variant="warning"
    >
      Mandatory: we detect that the Logion Application needs to be re-synchronized with the Logion Blockchain. To proceed, please click on the button and sign to confirm this operation.
    </Alert>
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <Button
      id="btnConfirmProtection"
      onClick={[Function]}
    >
      Re-Sync Confirmation
    </Button>
    <LegalOfficers
      legalOfficer1={
        Object {
          "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
          "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
          "name": "Guillaume Grain",
        }
      }
      legalOfficer1Decision="PENDING"
      legalOfficer2={
        Object {
          "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
          "name": "Patrick Gielen",
        }
      }
      legalOfficer2Decision="PENDING"
      legalOfficers={
        Array [
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick Gielen",
          },
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume Grain",
          },
          Object {
            "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Eline Duysens",
          },
          Object {
            "address": "1234567890-abcd-6",
            "details": "Place de le République Française, 10",
            "name": "Ronald Vanswijgenhoven",
          },
          Object {
            "address": "1234567890-abcd-7",
            "details": "Place de le République Française, 10",
            "name": "Thibaut Barnier",
          },
          Object {
            "address": "1234567890-abcd-8",
            "details": "Place de le République Française, 10",
            "name": "Jona Van Leeuwen",
          },
          Object {
            "address": "1234567890-abcd-9",
            "details": "Place de le République Française, 10",
            "name": "Carlos Calvo",
          },
          Object {
            "address": "1234567890-abcd-10",
            "details": "Place de le République Française, 10",
            "name": "Ilias Tsipos",
          },
          Object {
            "address": "1234567890-abcd-11",
            "details": "Place de le République Française, 10",
            "name": "Pedroso Leal",
          },
          Object {
            "address": "1234567890-abcd-12",
            "details": "Place de le République Française, 10",
            "name": "Marc Schmitz",
          },
        ]
      }
      mode="view"
      setLegalOfficer1={[Function]}
      setLegalOfficer2={[Function]}
      status="PENDING"
    />
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest pending recovery request 1`] = `
<FullWidthPane
  mainTitle="Recovery"
  titleIcon={
    Object {
      "background": Object {
        "from": "#7a90cb",
        "to": "#3b6cf4",
      },
      "icon": Object {
        "hasVariants": false,
        "id": "recovery",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Alert
      variant="warning"
    >
      Mandatory: we detect that the Logion Application needs to be re-synchronized with the Logion Blockchain. To proceed, please click on the button and sign to confirm this operation.
    </Alert>
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <Button
      id="btnConfirmProtection"
      onClick={[Function]}
    >
      Re-Sync Confirmation
    </Button>
    <Button
      data-testid="btnClaim"
      onClick={[Function]}
    >
      Claim
    </Button>
    <ExtrinsicSubmitter
      id="initiateRecovery"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Recovery successfully initiated."
    />
    <LegalOfficers
      legalOfficer1={
        Object {
          "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
          "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
          "name": "Guillaume Grain",
        }
      }
      legalOfficer1Decision="PENDING"
      legalOfficer2={
        Object {
          "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
          "name": "Patrick Gielen",
        }
      }
      legalOfficer2Decision="PENDING"
      legalOfficers={
        Array [
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick Gielen",
          },
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume Grain",
          },
          Object {
            "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Eline Duysens",
          },
          Object {
            "address": "1234567890-abcd-6",
            "details": "Place de le République Française, 10",
            "name": "Ronald Vanswijgenhoven",
          },
          Object {
            "address": "1234567890-abcd-7",
            "details": "Place de le République Française, 10",
            "name": "Thibaut Barnier",
          },
          Object {
            "address": "1234567890-abcd-8",
            "details": "Place de le République Française, 10",
            "name": "Jona Van Leeuwen",
          },
          Object {
            "address": "1234567890-abcd-9",
            "details": "Place de le République Française, 10",
            "name": "Carlos Calvo",
          },
          Object {
            "address": "1234567890-abcd-10",
            "details": "Place de le République Française, 10",
            "name": "Ilias Tsipos",
          },
          Object {
            "address": "1234567890-abcd-11",
            "details": "Place de le République Française, 10",
            "name": "Pedroso Leal",
          },
          Object {
            "address": "1234567890-abcd-12",
            "details": "Place de le République Française, 10",
            "name": "Marc Schmitz",
          },
        ]
      }
      mode="view"
      setLegalOfficer1={[Function]}
      setLegalOfficer2={[Function]}
      status="PENDING"
    />
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest protection request 1`] = `
<FullWidthPane
  mainTitle="My Logion Protection"
  titleIcon={
    Object {
      "background": undefined,
      "icon": Object {
        "hasVariants": true,
        "id": "shield",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Alert
      variant="info"
    >
      Your Logion Trust Protection request has been submitted. Your Legal Officers will contact you as soon as possible to finalize the KYC process. Please note that, after the successful completion of one of your Legal Officer approval processes, you will be able to use all features provided by your logion account dashboard.
    </Alert>
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <LegalOfficers
      legalOfficer1={
        Object {
          "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
          "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
          "name": "Guillaume Grain",
        }
      }
      legalOfficer1Decision="PENDING"
      legalOfficer2={
        Object {
          "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
          "name": "Patrick Gielen",
        }
      }
      legalOfficer2Decision="PENDING"
      legalOfficers={
        Array [
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick Gielen",
          },
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume Grain",
          },
          Object {
            "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Eline Duysens",
          },
          Object {
            "address": "1234567890-abcd-6",
            "details": "Place de le République Française, 10",
            "name": "Ronald Vanswijgenhoven",
          },
          Object {
            "address": "1234567890-abcd-7",
            "details": "Place de le République Française, 10",
            "name": "Thibaut Barnier",
          },
          Object {
            "address": "1234567890-abcd-8",
            "details": "Place de le République Française, 10",
            "name": "Jona Van Leeuwen",
          },
          Object {
            "address": "1234567890-abcd-9",
            "details": "Place de le République Française, 10",
            "name": "Carlos Calvo",
          },
          Object {
            "address": "1234567890-abcd-10",
            "details": "Place de le République Française, 10",
            "name": "Ilias Tsipos",
          },
          Object {
            "address": "1234567890-abcd-11",
            "details": "Place de le République Française, 10",
            "name": "Pedroso Leal",
          },
          Object {
            "address": "1234567890-abcd-12",
            "details": "Place de le République Française, 10",
            "name": "Marc Schmitz",
          },
        ]
      }
      mode="view"
      setLegalOfficer1={[Function]}
      setLegalOfficer2={[Function]}
      status="ACTIVATED"
    />
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest recovery request 1`] = `
<FullWidthPane
  mainTitle="My Logion Protection"
  subTitle="Recovery process status"
  titleIcon={
    Object {
      "background": undefined,
      "icon": Object {
        "hasVariants": true,
        "id": "shield",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Alert
      variant="info"
    >
      Your Logion Recovery request
       for account toRecover
       has been submitted. Your Legal Officers will contact you as soon as possible to finalize the KYC process.
    </Alert>
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <LegalOfficers
      legalOfficer1={
        Object {
          "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
          "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
          "name": "Guillaume Grain",
        }
      }
      legalOfficer1Decision="PENDING"
      legalOfficer2={
        Object {
          "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
          "name": "Patrick Gielen",
        }
      }
      legalOfficer2Decision="PENDING"
      legalOfficers={
        Array [
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick Gielen",
          },
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume Grain",
          },
          Object {
            "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Eline Duysens",
          },
          Object {
            "address": "1234567890-abcd-6",
            "details": "Place de le République Française, 10",
            "name": "Ronald Vanswijgenhoven",
          },
          Object {
            "address": "1234567890-abcd-7",
            "details": "Place de le République Française, 10",
            "name": "Thibaut Barnier",
          },
          Object {
            "address": "1234567890-abcd-8",
            "details": "Place de le République Française, 10",
            "name": "Jona Van Leeuwen",
          },
          Object {
            "address": "1234567890-abcd-9",
            "details": "Place de le République Française, 10",
            "name": "Carlos Calvo",
          },
          Object {
            "address": "1234567890-abcd-10",
            "details": "Place de le République Française, 10",
            "name": "Ilias Tsipos",
          },
          Object {
            "address": "1234567890-abcd-11",
            "details": "Place de le République Française, 10",
            "name": "Pedroso Leal",
          },
          Object {
            "address": "1234567890-abcd-12",
            "details": "Place de le République Française, 10",
            "name": "Marc Schmitz",
          },
        ]
      }
      mode="view"
      setLegalOfficer1={[Function]}
      setLegalOfficer2={[Function]}
      status="ACTIVATED"
    />
  </Frame>
</FullWidthPane>
`;
